Video end points completed, Swagger is ready for video APIs
